Homepage: Fast fix applied z-index to objective delete button

--- a/frontend/components/home-page/home-page.scss
+++ b/frontend/components/home-page/home-page.scss
@@ -44,8 +44,8 @@
 		  display: block;
 		  margin: 0;
 		  padding: 5px 0px;
-		  width: 35px
-
+		  width: 35px;
+			z-index: 1;
 		}
 		.progress-bar{
 			padding-top: 0px;
@@ -83,7 +83,7 @@
 			.undisplay {
 				display: none;
 			}
-			
+
 			.key-result-details-ul {
 				width: 100%;
         margin: 0;
@@ -116,8 +116,8 @@
 						top: 6px;
 						right: 15px;
 						display: block;
-						box-sizing: border-box;		
-						font-size: 15px;			
+						box-sizing: border-box;
+						font-size: 15px;
 						background: $color-green;
 						border: 1px solid $color-green;
 						border-radius: .3em;
@@ -135,7 +135,7 @@
 				}
 			}
 		}
-	}	
+	}
 }
 
 .category {
